tests/baselines/reference/parserES5SymbolProperty3.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty3.ts(2,5): error TS1165: A computed property name in an ambient context must refer to an expression whose type is a literal type or a 'unique symbol' type.
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty3.ts(2,6): error TS2693: 'Symbol' only refers to a type, but is being used as a value here.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty3.ts (2 errors) ====
    declare class C {
        [Symbol.unscopables](): string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS1165: A computed property name in an ambient context must refer to an expression whose type is a literal type or a 'unique symbol' type.
         ~~~~~~
!!! error TS2693: 'Symbol' only refers to a type, but is being used as a value here.
    }